# ctxtual

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_quickstart.py  02_rag_support_agent.py  03_data_pipeline.py  04_custom_tools.py  05_pipelines.py  06_persistence.py  07_error_handling.py  08_multi_agent.py  09_openai_agent.py  10_anthropic_agent.py  11_concurrent_server.py  README.md
examples/notebooks/: 01_quickstart.ipynb  02_text_and_documents.ipynb  03_pipelines_deep_dive.ipynb  04_openai_agent_loop.ipynb  05_advanced_patterns.ipynb
src/ctxtual/: __init__.py  ctx.py  exceptions.py  forge.py  pipeline.py  toolset.py  transforms.py  types.py  utils.py
src/ctxtual/integrations/: __init__.py  anthropic.py  langchain.py  openai.py
src/ctxtual/store/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_concurrency.py  test_ctx.py  test_data_shape.py  test_error_recovery.py  test_forge.py  test_integration.py  test_integrations.py  test_llm_interface.py  test_memory_store.py  test_pipeline.py  test_production.py  test_schema_quality.py  test_search_quality.py  test_sqlite_store.py  test_text_support.py  test_toolset.py  test_types.py  test_utils.py
