[project]
name = "ctxtual"
version = "0.1.2"
description = "Context engineering library for AI agents: decorator-based workspace storage for large tool results"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edoardo Federici" }]
keywords = ["ai", "agents", "llm", "context", "tools", "mcp", "context-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
all = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/banda-larga/ctxtual"
Repository = "https://github.com/banda-larga/ctxtual"
Documentation = "https://github.com/banda-larga/ctxtual#readme"
Issues = "https://github.com/banda-larga/ctxtual/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxtual"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ctxtual"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
]
